objects/Base_ID_Test_Object__c.object
<CustomObject>
    <fields>
        <fullName>Contact_ID_1__c</fullName>
        <label>Contact ID 1</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID_1__c</fullName>
        <label>Deal ID 1</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_ID_1__c</fullName>
        <label>Note ID 1</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_ID_1__c</fullName>
        <label>Task ID 1</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taskable_ID_1__c</fullName>
        <label>Taskable ID 1</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID_1__c</fullName>
        <label>User ID 1</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <label>Base ID Test Object</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base ID Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>